--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -135,6 +135,7 @@ conception ,/n./@概念;,/n./@设想;,/n./@怀孕;
 concession ,/n./@讓步;,/n./@退位;,/n./@減免;,/n./@特許;,/n./@租界;
 conclusion ,/n./@结论;,/n./@推论;
 conclusive ,/adj./@结束的;,/adj./@结论性的;,/adj./@确凿的;
+concoction ,/n./@调制品;,/n./@混合物;,/n./@调制;,/n./@烹制;,/n./@编造;
 concurrent ,/adj./@同時發生的;
 concussion ,/n./@衝擊;
 condescend ,/v./@屈尊;,/v./@俯就;
@@ -295,6 +296,7 @@ guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
 handicraft ,/n./@手工艺品;
 helicopter ,/n./@直升飞机;
+hemorrhoid ,/n./@痔瘡;
 henceforth ,/adv./@从此之后;
 hereditary ,/adj./@遗传的;,/adj./@世袭的;
 heretofore ,/adv./@直到此时;,/adv./@迄今为止;,/adv./@在这以前;
@@ -590,6 +592,7 @@ untethered ,/adj./@不受限的;
 unwinnable ,/adj./@不可取胜的;
 upbringing ,/n./@养育;
 validation ,/n./@確認;,/n./@批准;,/n./@生效;
+ventilator ,/n./@呼吸机;,/n./@通风设备;,/n./@通风口;
 verifiable ,/adj./@可证实的;
 vindictive ,/adj./@懷恨的;,/adj./@有報仇心的;,/adj./@懲罰的;
 visionally ,/adv./@虚幻地;
