--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -37,6 +37,7 @@ carnivorous ,/adj./@食肉的;
 celebration ,/n./@庆祝;
 certificate ,/n./@证书;,/vt./以证书@授权;,/vt./以证书@批准;
 charismatic ,/adj./@吸引人的;,/adj./@蒙受神恩的;,/adj./@有魅力的;
+cholesterol ,/n./@胆固醇;
 clandestine ,/adj./@隱藏的;,/adj./@秘密的;
 coincidence ,/n./@巧合;
 collaborate ,/v./@合作;,/v./@勾结;,/v./@通敌;
@@ -255,6 +256,7 @@ personality ,/n./@个性;
 perspective ,/n./@观点;,/n./@视角;
 pessimistic ,/adj./@悲观的;
 poltergeist ,/n./@搗蛋鬼;
+pomegranate ,/n./@石榴;,/n./@石榴树;
 possibility ,/n./@可能性;
 precipitate ,/v./@促成;
 predictable ,/adj./@可预测的;
