--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -21,6 +21,7 @@ assassinator ,/n./@刺客;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
 authenticate ,/v./@鑒定;,/v./@證明;
+bloodletting ,/n./@放血疗法;
 bureaucratic ,/adj./@官僚主義的;
 cancellation ,/n./@刪除;,/n./@取消;
 canonicalize ,/v./@規範化;
@@ -98,6 +99,7 @@ independence ,/n./@独立;,/n./@独立性;
 indifference ,/n./@冷淡;,/n./@不关心;
 individually ,/adv./@个人的;
 infiltration ,/n./@渗透;
+inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
 installation ,/n./@安裝;
 insufficient ,/adj./@不足的;
