--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -348,6 +348,7 @@ gave ,/v./<give 的過去式>@給;
 gaze ,/v./@凝視;
 gear ,/n./@齒輪;,/n./@裝置;,/n./@工具;
 geek ,/n./@極客;,/n./@怪人;
+germ ,/n./@微生物;,/n./@细菌;,/n./@种子;,/n./@胚芽;,/n./@萌生;
 gift ,/n./@禮物;,/n./@天賦;
 girl ,/n./@女孩;
 give ,/v./@給;
@@ -971,7 +972,7 @@ tire ,/v./@疲勞;,/n./@輪胎;
 toad ,/n./@蟾蜍;
 toil ,/v./@苦干;
 told ,/v./@告訴;
-toll ,/n./@稅收;,/n./@代價;,/n./@鐘聲;,/vt./@徵收;,/vi./@徵稅;,/vi.//vt./@敲@鐘;
+toll ,/n./@稅收;,/n./@代價;,/n./@鐘聲;,/vt./@徵收;,/vi./@徵稅;,/vi.//vt./@敲@鐘;,/n./@通行费;,/n./@毁坏;
 tomb ,/n./@墓;
 tone ,/n./@腔調;,/n./@語氣;,/n./@市況;
 took ,/v./@拿;
