--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -611,6 +611,7 @@ lease ,/n./@租約;,/n./@租期;,/v./@出租;
 leash ,/n./@皮帶;,/v./@束縛;
 least ,/n./@至少;
 leave ,/v./@離開;
+leech ,/n./@水蛭;
 leery ,/adj./@机敏的;,/adj./@狡猾的;,/adj./@猜疑的;
 legal ,/adj./@合法的;
 lemme ,/abbr./@讓我;
@@ -651,8 +652,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 March ,/n./@三月;
+march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
