--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1344,6 +1344,7 @@ twelve ,/n./@十二;
 twenty ,/adj./@二十;
 twitch ,/vi./@抽搐;
 tyrant ,/n./@暴君;
+unclog ,/vt./@疏通;
 undone ,/v./@解開;
 unfair ,/adj./@不公平的;
 unfold ,/v./@打開;,/v./@展開;
@@ -1366,8 +1367,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-Utopia ,/n./@烏托邦;
 utopia ,/n./@烏托邦;
+Utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
