--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -125,6 +125,7 @@ bisexual ,/adj./@兩性的;
 blackout ,/n./@黑屏;
 blockade ,/n./@封鎖;,/n./@阻塞;
 blockage ,/n./@封鎖;,/n./@阻塞;,/n./@阻塞物;
+bloodlet ,/v./@放血;
 blowhard ,/n./@吹牛大家;
 bonhomie ,/n./@溫和;,/n./@和藹;
 bookworm ,/n./@书虫;,/n./@书呆子;
