--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -58,6 +58,7 @@ annotated ,/adj./@有註釋的;
 anomalous ,/adj./@不普通的;
 anonymous ,/adj./@匿名的;
 antiquate ,/adj./@废弃;,/adj./@过时;
+antiquity ,/n./@古代;,/n./@古迹;,/n./@古物;,/n./@古老;
 apartment ,/n./@公寓;
 apathetic ,/adj./@冷漠的;
 apologize ,/v./@道歉;
@@ -74,6 +75,8 @@ arbitrate ,/v./@仲裁;,/v./@公斷;
 archetype ,/n./@典範;
 arresting ,/adj./@吸引人的;
 arrogance ,/n./@傲慢;,/n./@自大;
+arthritic ,/adj./@关节炎的;,/adj./@患关节炎的;
+arthritis ,/n./@关节炎;
 artillery ,/n./@炮兵部隊;,/n./@炮;,/n./@大炮;
 ascendant ,/adj./@有影響力的;,/adj./@上升的;
 aspersion ,/n./@誹謗;
@@ -524,6 +527,7 @@ matricide ,/n./@弑母;
 matrimony ,/n./@結婚;,/n./@婚禮;,/n./@婚姻;
 meanwhile ,/adv./@同时;
 mechanism ,/n./@机制;
+menstrual ,/adj./@月经的;
 mesmerize ,/v./@吸引;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
@@ -717,6 +721,7 @@ resultant ,/adj./@結果的;
 resurrect ,/v./@复活;,/v./@使复活;
 retaliate ,/v./@報復;
 retribute ,/v./@报应;
+rheumatic ,/adj./@风湿病的;,/adj./@患风湿病的;
 righteous ,/adj./@正义的;
 sacrifice ,/n./@牺牲;
 salacious ,/adj./@淫穢的;,/adj./@淫蕩的;,/adj./@猥褻的;,/adj./@色情的;
