--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -135,6 +135,7 @@ conception
 concession
 conclusion
 conclusive
+concoction
 concurrent
 concussion
 condescend
@@ -295,6 +296,7 @@ guillotine
 gymnastics
 handicraft
 helicopter
+hemorrhoid
 henceforth
 hereditary
 heretofore
@@ -590,6 +592,7 @@ untethered
 unwinnable
 upbringing
 validation
+ventilator
 verifiable
 vindictive
 visionally
