--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -37,6 +37,7 @@ carnivorous
 celebration
 certificate
 charismatic
+cholesterol
 clandestine
 coincidence
 collaborate
@@ -255,6 +256,7 @@ personality
 perspective
 pessimistic
 poltergeist
+pomegranate
 possibility
 precipitate
 predictable
