--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -21,6 +21,7 @@ assassinator
 asynchronous
 auscultation
 authenticate
+bloodletting
 bureaucratic
 cancellation
 canonicalize
@@ -98,6 +99,7 @@ independence
 indifference
 individually
 infiltration
+inflammatory
 infringement
 installation
 insufficient
