--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -611,6 +611,7 @@ lease
 leash
 least
 leave
+leech
 leery
 legal
 lemme
@@ -651,8 +652,8 @@ magic
 major
 mango
 mania
-march
 March
+march
 match
 maths
 maxim
