--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -1344,6 +1344,7 @@ twelve
 twenty
 twitch
 tyrant
+unclog
 undone
 unfair
 unfold
@@ -1366,8 +1367,8 @@ urbane
 urgent
 useful
 utmost
-Utopia
 utopia
+Utopia
 vacant
 vacate
 vacuum
