--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -28,6 +28,7 @@ against
 agility
 agitate
 agonize
+ailment
 aimless
 airport
 airship
@@ -204,8 +205,8 @@ charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -287,6 +288,7 @@ copious
 cordial
 corpora
 correct
+corrode
 corrupt
 costume
 cottage
@@ -1215,8 +1217,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
