--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -58,6 +58,7 @@ annotated
 anomalous
 anonymous
 antiquate
+antiquity
 apartment
 apathetic
 apologize
@@ -74,6 +75,8 @@ arbitrate
 archetype
 arresting
 arrogance
+arthritic
+arthritis
 artillery
 ascendant
 aspersion
@@ -524,6 +527,7 @@ matricide
 matrimony
 meanwhile
 mechanism
+menstrual
 mesmerize
 metabolic
 meteorite
@@ -717,6 +721,7 @@ resultant
 resurrect
 retaliate
 retribute
+rheumatic
 righteous
 sacrifice
 salacious
