--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -28,6 +28,7 @@ against ,/v./@反對;
 agility ,/n./@敏捷;,/n./@靈活;
 agitate ,/v./@煽動;
 agonize ,/v./@痛苦;
+ailment ,/n./@疾病;
 aimless ,/adj./@无目的的;
 airport ,/n./@飛機場;
 airship ,/n./@氣艇;
@@ -204,8 +205,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -287,6 +288,7 @@ copious ,/adj./@豐富的;
 cordial ,/adj./@熱誠的;,/adj./@诚恳的;,/adj./@强烈的;
 corpora ,/n./@全集;,/n./@主體;
 correct ,/adj./@正確的;
+corrode ,/vt./@腐蚀;,/vt./@锈蚀;,/vt./@侵蚀;
 corrupt ,/v./@腐化;,/v./@使腐化;
 costume ,/n./@服裝;
 cottage ,/n./@小屋;,/n./@村舍;
@@ -597,7 +599,7 @@ illegal ,/adj./@非法的;
 illicit ,/adj./@違法的;,/adj./@不正當的;
 imagine ,/v./@想象;
 imitate ,/v./@模仿;
-immerse ,/v./@沉浸于;
+immerse ,/v./@沉浸于;,/vt./@浸泡;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
@@ -965,7 +967,7 @@ regalia ,/n./@王權;,/n./@徽章;,/n./@標志;
 regular ,/adj./@有規律的;
 rejoice ,/n./@歡樂;
 release ,/v./@发布;,/v./@釋放;
-remnant ,/n./@殘余;
+remnant ,/n./@殘余;,/n./@残迹;
 remorse ,/n./@懊悔;,/n./@同情;
 renewal ,/n./@更新;,/n./@恢復;,/n./@復興;,/n./@革新;,/n./@續訂;,/n./@續借;
 replace ,/v./@代替;
@@ -1174,7 +1176,7 @@ trample ,/v./@踐踏;
 tranche ,/n./@部分;
 tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
-tribute ,/n./@頌詞;,/n./@獻禮;
+tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
 trickle ,/v./@滴下;
 trigger ,/n./@扳機;
 trinity ,/n./@三位一體;,/n./@三倍;
@@ -1215,8 +1217,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
