--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -224,6 +224,7 @@ discourage ,/v./@使沮丧;
 discretion ,/n./@决断能力;,/n./@处理权;,/n./@酌情决定权;,/n./@谨慎;,/n./@慎重;
 discussion ,/n./@讨论;
 disgusting ,/adj./@令人厌恶的;
+dispossess ,/vt./@剥夺;
 disruption ,/n./@破坏;
 disruptive ,/adj./@破坏性的;
 distillery ,/n./@蒸餾;
@@ -510,6 +511,7 @@ sabbatical ,/adj./@休假的;
 sacrosanct ,/adj./@神聖不可侵犯的;
 salability ,/n./@適銷性;
 salutation ,/n./@問候;,/n./@稱呼;,/n./@招呼;,/n./@稱謂;
+sanitation ,/n./@公共卫生;
 saturation ,/n./@飽和;,/n./@浸泡;,/n./@饱和度;
 scatheless ,/adj./@无损伤的;
 scientific ,/adj./@科学的;
