--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -252,6 +252,7 @@ pub ,/n./@酒館;
 pun ,/n./@雙關語;,/n./@俏皮話;,/v./@說雙關語;
 put ,/v./@放;
 rag ,/n./@碎布;,/n./@碎屑;,/v./@戲弄;,/v./@責罵;
+ram ,/n./@公羊;,/n./@夯锤;,/vt./@猛撞;,/vt./@硬塞;
 rat ,/n./@耗子;,/n./@老鼠;
 raw ,/adj./@生的;
 ray ,/n./@射綫;
