--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -139,7 +139,7 @@ club ,/n./@俱樂部;
 clue ,/n./@線索;
 coal ,/n./@煤;
 coat ,/n./@外套;
-coax ,/v./@哄騙;
+coax ,/v./@哄騙;,/vt./@引诱;,/vt./@哄劝;
 coda ,/n./@終曲;
 code ,/n./@代碼;,/n./@密碼;
 coil ,/n./圈;,/n./@綫圈;,/n./@卷;
@@ -970,6 +970,7 @@ tiny ,/adj./@極小的;
 tips ,/n./@技巧;,/n./@貼士;
 tire ,/v./@疲勞;,/n./@輪胎;
 toad ,/n./@蟾蜍;
+toga ,/n./@托加袍;
 toil ,/v./@苦干;
 told ,/v./@告訴;
 toll ,/n./@稅收;,/n./@代價;,/n./@鐘聲;,/vt./@徵收;,/vi./@徵稅;,/vi.//vt./@敲@鐘;,/n./@通行费;,/n./@毁坏;
