--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -43,6 +43,7 @@ almost ,/adv./@幾乎;
 always ,/adv./@總是;
 amount ,/n./@數量;
 ampere ,/n./@安培;
+amulet ,/n./@护身符;
 analog ,/n./@模拟;,/n./@类似;
 anchor ,/n./@錨;,/v./@固定;
 anemic ,/adj./@無活力的;
@@ -196,8 +197,8 @@ camera ,/n./@照相機;
 campus ,/n./@校園;
 Canada ,/n./@加拿大;
 cancel ,/v./@取消;
-cancer ,/n./@癌症;
 Cancer ,/n./@巨蟹座;
+cancer ,/n./@癌症;
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -431,6 +432,7 @@ enough ,/adj./@足夠的;,/adj./@充足的;,/adv./@足够地;,/adv./@相当;,/ad
 enrage ,/v./@激怒;
 enrich ,/v./@充實;
 enroll ,/v./@登記;
+ensign ,/n./@旗;,/n./@舰旗;,/n./@军旗;
 ensure ,/v./@保證;
 entail ,/v./@遺留;,/v./@蘊含;,/v./@需要;
 entice ,/v./@引诱;,/v./@诱惑;,/v./@吸引;,/v./@诱使;,/v./@怂恿;
@@ -632,6 +634,7 @@ ignore ,/v./@忽視;,/v./@忽略;
 immune ,/v./@免疫;
 impact ,/v./@影響;
 impair ,/vt./@損害;
+impale ,/vt./@刺穿;
 impart ,/vt./@賦予;
 impede ,/v./@妨礙;,/v./@阻礙;
 import ,/v./@輸入;,/v./@進口;
@@ -986,6 +989,7 @@ rascal ,/n./@流氓;,/n./@惡棍;,/n./@無賴;
 rather ,/adv./@相當;,/adv./@寧願;,/adv./@更;
 ratify ,/v./@批准;,/v./@認可;
 ration ,/n./@配給;,/n./@定量;,/n./@口糧;
+rattle ,/n./@拨浪鼓;,/n./@响板;,/n./@角质环;,/vi./@乒乓响;
 ravage ,/v./@毀壞;,/v./@破壞;,/n./@破壞;
 really ,/adv./@眞的;,/adv./@眞實地;
 realty ,/n./@房地產;,/n./@不動產;
@@ -1350,6 +1354,7 @@ unfair ,/adj./@不公平的;
 unfold ,/v./@打開;,/v./@展開;
 unhold ,/v./@釋放;
 unique ,/adj./@獨一無二的;
+unisex ,/adj./@不分男女的;
 unison ,/n./@和諧;
 united ,/adj./@联合的;
 unless ,/prep./@除非;
@@ -1367,8 +1372,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
+utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
