--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -193,7 +193,7 @@ caution ,/n./@警告;,/n./@註意;
 ceiling ,/n./@天花板;
 celsius ,/n./@攝氏;
 central ,/adj./@中央的;,/adj./@中心的;
-ceramic ,/adj./@陶瓷的;
+ceramic ,/adj./@陶瓷的;,/n./@陶瓷;
 certain ,/adj./@某一;,/adj./@必然的;,/adj./@確信;,/adj./@有把握的;
 certify ,/v./@證明;,/v./@保證;
 chalice ,/n./@杯;,/n./@酒杯;
@@ -205,8 +205,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-Chinese ,/n./@漢語;
 chinese ,/n./@漢語;
+Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -562,6 +562,7 @@ greater ,/adj./@更大的;
 grimace ,/v./@扮鬼臉;,/n./@鬼臉;
 grocery ,/n./@雜貨店;
 groupon ,/n./@團購;
+hamster ,/n./@仓鼠;
 handoff ,/n./@傳送;,/n./@傳球;
 happily ,/adv./@快樂地;
 harbour ,/n./@港灣;
@@ -710,6 +711,7 @@ mercury ,/n./@水星;,/n./@水銀;,/n./@汞;
 mermaid ,/n./@人魚;
 message ,/n./@信息;,/n./@音訊;
 microbe ,/n./@微生物;
+midwife ,/n./@助产士;
 migrant ,/n./@移居者;
 migrate ,/v./@移居;
 million ,/n./@百萬;
@@ -1147,6 +1149,7 @@ terrace ,/n./@平臺;,/n./@臺階;
 terrain ,/n./@地形;,/n./@地勢;
 terrify ,/vt./@恐嚇;
 testify ,/v./@證明;,/v./@證實;
+tetanus ,/n./@破伤风;
 textile ,/n./@紡織品;
 texture ,/n./@質地;,/n./@紋理;,/n./@結構;,/n./@本質;
 theatre ,/n./@劇院;
