--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -50,6 +50,7 @@ amenable ,/adj./@順從的;
 American ,/n./@美国人;
 amicable ,/adj./@友善的;
 amphibia ,/n./@兩棲類;
+amputate ,/vt./@截除;,/vi./@截肢;
 anabolic ,/adj./@合成代謝的;,/adj./@同化的;
 analogue ,/n./@類似物;,/adj./@類似的;,/n./@模擬;
 analysis ,/n./@分析;
@@ -76,7 +77,7 @@ apposite ,/adj./@相關的;
 appraise ,/v./@评价;,/v./@估价;,/v./@鉴定;
 approach ,/v./@接近;,/n./@途徑;
 approval ,/n./@赞成;
-aquarium ,/n./@水族館;,/n./@水缸;,/n./@養魚池;
+aquarium ,/n./@水族館;,/n./@水缸;,/n./@養魚池;,/n./@水族池;
 aqueduct ,/n./@沟渠;,/n./@水渠;
 arborist ,/n./@园艺设计师;
 archaism ,/n./@古語;
@@ -659,6 +660,7 @@ musician ,/n./@音乐家;
 mustache ,/n./@胡子;,/n./@髭;
 mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;
 national ,/adj./@国家的;,/adj./@民族的;
+nativity ,/n./@耶稣的诞生;
 nautical ,/adj./@航海的;
 navigate ,/v./@航行;,/v./@航空;
 necklace ,/n./@项链;
@@ -730,6 +732,7 @@ parallax ,/n./@视差;
 parallel ,/adj./@平行的;
 paralyze ,/v./@使瘫痪;
 paramour ,/n./@情人;,/n./@情婦;,/n./@情伕;
+parasite ,/n./@寄生虫;,/n./@寄生生物;
 particle ,/n./@颗粒;
 passerby ,/n./@路人;
 passport ,/n./@护照;
