--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -825,6 +825,7 @@ treadmill ,/n./@踏車;,/n./@跑步機;,/n./@單調的工作;
 treatment ,/n./@治療;,/n./@待遇;
 trembling ,/adj./@发抖的;
 turbulent ,/adj./@动荡的;
+umbilical ,/adj./@脐带的;
 underline ,/v./@强调;
 undermine ,/v./@暗中破坏;
 undertake ,/v./@從事;,/v./@承擔;
@@ -867,3 +868,4 @@ wonderful ,/adj./@精彩的;
 workforce ,/n./@劳动力;
 workplace ,/n./@工作地;
 yesterday ,/n./@昨天;,/adv./@在昨天;
+youngster ,/n./@少年;
