--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -224,6 +224,7 @@ discourage
 discretion
 discussion
 disgusting
+dispossess
 disruption
 disruptive
 distillery
@@ -510,6 +511,7 @@ sabbatical
 sacrosanct
 salability
 salutation
+sanitation
 saturation
 scatheless
 scientific
