--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -43,6 +43,7 @@ almost
 always
 amount
 ampere
+amulet
 analog
 anchor
 anemic
@@ -196,8 +197,8 @@ camera
 campus
 Canada
 cancel
-cancer
 Cancer
+cancer
 candid
 cannon
 cannot
@@ -431,6 +432,7 @@ enough
 enrage
 enrich
 enroll
+ensign
 ensure
 entail
 entice
@@ -632,6 +634,7 @@ ignore
 immune
 impact
 impair
+impale
 impart
 impede
 import
@@ -986,6 +989,7 @@ rascal
 rather
 ratify
 ration
+rattle
 ravage
 really
 realty
@@ -1350,6 +1354,7 @@ unfair
 unfold
 unhold
 unique
+unisex
 unison
 united
 unless
@@ -1367,8 +1372,8 @@ urbane
 urgent
 useful
 utmost
-utopia
 Utopia
+utopia
 vacant
 vacate
 vacuum
