--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -50,6 +50,7 @@ amenable
 American
 amicable
 amphibia
+amputate
 anabolic
 analogue
 analysis
@@ -659,6 +660,7 @@ musician
 mustache
 mutilate
 national
+nativity
 nautical
 navigate
 necklace
@@ -730,6 +732,7 @@ parallax
 parallel
 paralyze
 paramour
+parasite
 particle
 passerby
 passport
