--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -177,6 +177,7 @@ impersonate ,/v./@假冒;,/v./@冒充;
 impertinent ,/adj./@不適當的;,/adj./@無理的;
 implication ,/n./@含义;,/n./@暗示;
 improvement ,/n./@改善;
+incantation ,/n./@咒语;,/n./@念咒;
 incarcerate ,/v./@監禁;
 incarnation ,/n./@化身;
 inclination ,/n./@傾向;,/n./@愛好;,/n./@傾斜;,/n./@斜坡;
@@ -289,8 +290,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-renaissance ,/n./@复活;,/n./@再生;
 Renaissance ,/n./@文艺复兴;
+renaissance ,/n./@复活;,/n./@再生;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
