--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -177,6 +177,7 @@ impersonate
 impertinent
 implication
 improvement
+incantation
 incarcerate
 incarnation
 inclination
@@ -289,8 +290,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-renaissance
 Renaissance
+renaissance
 replacement
 requirement
 resemblance
