--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -205,8 +205,8 @@ charter
 cherish
 chicken
 chimney
-Chinese
 chinese
+Chinese
 chowder
 chronic
 chuckle
@@ -562,6 +562,7 @@ greater
 grimace
 grocery
 groupon
+hamster
 handoff
 happily
 harbour
@@ -710,6 +711,7 @@ mercury
 mermaid
 message
 microbe
+midwife
 migrant
 migrate
 million
@@ -1147,6 +1149,7 @@ terrace
 terrain
 terrify
 testify
+tetanus
 textile
 texture
 theatre
