--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -103,6 +103,7 @@ centimeter ,/n./@厘米;
 cephalopod ,/n./@头足类动物;
 ceremonial ,/adj./@庆典的;,/adj./@仪式的;
 chalkboard ,/n./@黑板;
+charioteer ,/n./@双轮战车驾驭者;
 chivalrous ,/adj./@俠義的;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;
@@ -394,6 +395,7 @@ monochroic ,/adj./@單色的;
 monochrome ,/n./@單色;,/adj./@單色的;,/adj./@黑白的;
 monogamous ,/adj./@單一配偶的;
 monopolize ,/vt./@垄断;
+monotheist ,/n./@一神论者;
 monotonous ,/adj./@单调的;
 motivation ,/n./@动力;
 multiplier ,/n./@乘數;,/n./@倍增器;
