--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -45,6 +45,7 @@ collocation ,/n./@搭配;,/n./@佈置;,/n./@組合;
 combination ,/n./@结合;,/n./@联合;,/n./@组合;,/n./@化合;
 comfortable ,/adj./@舒適的;
 commandante ,/n./@司令官;
+commandment ,/n./@戒条;,/n./@戒律;,/n./@命令;
 commemorate ,/v./@紀念;
 communicate ,/v./@交流;
 compartment ,/n./@隔间;,/n./@隔室;,/n./@区划;,/n./@客房;
@@ -76,7 +77,7 @@ contaminate ,/v./@污染;
 contemplate ,/v./@沉思;
 contentious ,/adj./@有争议的;
 continental ,/adj./@大陸的;
-contingency ,/n./@事故;,/n./@意外;
+contingency ,/n./@事故;,/n./@意外;,/n./@应急措施;
 continuance ,/n./@繼續;
 contraction ,/n./@收縮;,/n./@緊縮;
 contributor ,/n./@贡献@者;
@@ -187,6 +188,7 @@ incredulous ,/adj./@懷疑的;
 incremental ,/adj./@增加的;
 independent ,/adj./@独立的;
 indignation ,/n./@愤慨;
+indivisible ,/adj./@不可分割的;
 inferiority ,/n./@劣勢;
 information ,/n./@信息;
 innumerable ,/adj./@无数的;
@@ -290,8 +292,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-Renaissance ,/n./@文艺复兴;
 renaissance ,/n./@复活;,/n./@再生;
+Renaissance ,/n./@文艺复兴;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
