--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -111,6 +111,7 @@ intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
 intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;
 interstellar ,/adj./@星際的;
 intervention ,/n./@介入;,/n./@調停;,/n./@干涉;
+intimidation ,/n./@恐吓;,/n./@威胁;
 intransigent ,/adj./@不妥协的;
 introduction ,/n./@介紹;,/n./@引言;
 irreversible ,/adj./@不可逆轉的;
@@ -120,6 +121,7 @@ magnificence ,/n./@壯麗;,/n./@宏偉;
 manipulation ,/n./@操纵;
 manufacturer ,/n./@制造者;
 mechanically ,/adv./@机械的;
+metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
 metropolitan ,/n./@大都市;
 misquotation ,/n./@误引;
 modification ,/n./@修正;
@@ -138,6 +140,7 @@ periodically ,/adv./@阶段性的;
 perseverance ,/n./@坚持;
 perspiration ,/n./@流汗;
 perturbation ,/n./@攝動;,/n./@擾亂;,/n./@不安;
+plausibility ,/n./@貌似合理;,/n./@貌似可信;,/n./@可信度;
 possiblility ,/n./@可能性;
 predilection ,/n./@偏好;
 prerequisite ,/n./@先決條件;,/adj./@首要必備的;
