--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -60,7 +60,7 @@ been ,/v./@是;,/aux./@被;
 beep ,/v./@蜂鳴;
 beer ,/n./@啤酒;
 bell ,/n./@鈴;
-bend ,/v./@彎曲;
+bend ,/v./@彎曲;,/n./@弯曲;
 best ,/adj./@最好的;
 beta ,/n./@β;
 bias ,/n./@偏見;
@@ -308,7 +308,7 @@ flea ,/n./@跳蚤;
 flee ,/vi./@逃跑;,/v./@逃離;
 flew ,/v./<fly 的過去式>@飛;
 flip ,/v./@彈;,/v./@擲;
-flog ,/vt./@鞭打;,/鞭策/@鞭策;
+flog ,/vt./@鞭打;,/vt./@鞭策;
 flop ,/v./@拋下;,/n./@失敗;
 flow ,/v./@流;
 flux ,/n./@流動;,/n./@變遷;
