--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -243,7 +243,7 @@ clone ,/v./@無性繁殖;
 close ,/v./@關閉;,/v./@結束;
 cloth ,/n./@布;
 cloud ,/n./@雲;
-clout ,/n./@權力;
+clout ,/n./@權力;,/n./@势力;,/n./@影响力;,/n./@重击;,/vt./@重击;
 clown ,/n./@小醜;
 coach ,/n./@教練;,/n./@長途公共汽車;,/v./@訓練;,/v./@培訓;,/v./@輔導;
 coast ,/n./@海岸;
@@ -268,7 +268,7 @@ craft ,/n./@工藝;,/n./@手藝;
 cramp ,/v./@痙攣;
 crane ,/v./@伸長;
 crash ,/v./@碰撞;,/v./@墜毀;
-crate ,/n./@筐;,/n./@簍;,/n./@箱;
+crate ,/n./@筐;,/n./@簍;,/n./@箱;,/n./@分隔箱;
 crave ,/v./@渴望;,/v./@懇求;
 crawl ,/v./@爬;
 crazy ,/adj./@瘋狂的;
@@ -482,7 +482,7 @@ giant ,/adj./@巨大的;,/n./@巨人;
 glare ,/v./@瞪;
 glass ,/n./@玻璃;,/n./@鏡子;
 gleam ,/n./@微光;,/n./@閃光;,/v./@閃耀;
-glean ,/v./@收集;
+glean ,/v./@收集;,/vt./@搜集;
 glide ,/v./@滑行;
 glint ,/v./@閃耀;
 gloat ,/v./@幸災樂禍;
@@ -615,6 +615,7 @@ leech ,/n./@水蛭;
 leery ,/adj./@机敏的;,/adj./@狡猾的;,/adj./@猜疑的;
 legal ,/adj./@合法的;
 lemme ,/abbr./@讓我;
+leper ,/n./@麻风病人;
 let's ,/n.v./@我們去;
 level ,/n./@水平;,/n./@級別;
 lever ,/n./@槓桿;
@@ -652,8 +653,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-March ,/n./@三月;
 march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
+March ,/n./@三月;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
@@ -707,6 +708,7 @@ nasty ,/adj./@肮脏的;,/adj./@下流的;
 natal ,/adj./@出生的;
 naval ,/adj./@海军的;
 navel ,/n./@脐;,/n./@中心;
+needy ,/adj./@贫穷的;,/n./@穷人;
 Negro ,/n./@黑人;
 nerve ,/n./@神經;,/n./@膽量;
 never ,/adv./@從來不;,/adv./@從不會;
@@ -1021,7 +1023,7 @@ spark ,/n./@火星;
 spasm ,/n./@痙攣;
 spawn ,/n./@卵;,/v./@產卵;
 speak ,/v./@說;,/v./@講;
-spear ,/n./@矛;
+spear ,/n./@矛;,/n./@槍;,/vt./@用矛刺;
 spect ,/v./@看;
 speed ,/n./@速度;
 spend ,/v./@消耗;,/v./@花費;
@@ -1113,6 +1115,7 @@ taboo ,/v./@禁忌;,/v./@禁止;,/n./@禁忌;
 tacit ,/adj./@緘默的;,/adj./@不言而喻的;,/adj./@心照不宣的;,/adj./@默許的;
 taiga ,/n./@針葉林區;
 tardy ,/adj./@緩慢的;,/adj./@遲緩的;
+tarot ,/n./@塔罗牌;
 taste ,/n./@味道;,/v./@品嘗;
 taunt ,/v./@嘲笑;
 teach ,/v./@教;
