--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -35,6 +35,7 @@ agency ,/n./@代理;
 agenda ,/n./@議事日程;
 albeit ,/conj./@雖然;,/conj./@卽使;
 albion ,/n./@英格蘭@或不列顛的美稱;
+alcove ,/n./@凹处;
 alight ,/adj./@燒著的;
 allege ,/v./@斷言;,/v./@宣稱;
 allude ,/v./@間接提到;
@@ -144,6 +145,7 @@ better ,/adj./@更好的;
 beware ,/vi./@當心;,/v./@小心;,/v./@提防;
 beyond ,/v./@超過;
 biceps ,/n.//pl./@二头肌;
+biggie ,/n./@重要的事;,/n./@重要的人;
 billet ,/n./@便條;,/n./@短簡;
 binary ,/adj./@二進制的;,/adj./@二元的;
 bitter ,/adj./@苦的;
@@ -792,6 +794,7 @@ modest ,/adj./@謙虛的;,/adj./@質樸的;
 modify ,/v./@修正;,/v./@修飾;
 module ,/n./@模塊;,/n./@組件;
 modulo ,/v./@求餘;,/v./@按模;,/n./@模數;
+molten ,/adj./@熔化的;
 moment ,/n./@時刻;
 Monday ,/n./@星期一;
 monkey ,/n./@猴子;
@@ -999,7 +1002,7 @@ recall ,/v./@想起;,/v./@回憶;,/v./@找回;,/v./@撤銷;
 recast ,/v./@重铸;
 recede ,/v./@歸還;,/v./@撤回;,/v./@后退;,/v./@减弱;
 recent ,/adj./@最近的;
-recess ,/n./@休庭;
+recess ,/n./@休庭;,/n./@壁龛;,/n./@凹处;,/n./@暂停;,/n./@洞;
 recipe ,/n./@食譜;,/n./@配方;,/n./@秘訣;
 recite ,/v./@背誦;,/v./@朗誦;,/v./@講述;
 recoil ,/v./@畏縮;,/v./@反沖;,/v./@後座;
@@ -1051,7 +1054,7 @@ retina ,/n./@視網膜;
 retire ,/v./@退休;
 return ,/v./@返回;,/v./@歸還;
 reveal ,/v./@出現;,/v./@揭露;
-revere ,/v./@敬畏;,/v./@尊敬;,/v./@崇敬;
+revere ,/v./@敬畏;,/v./@尊敬;,/v./@崇敬;,/vt./@推崇;
 revert ,/v./@囬復;,/v./@重提;
 revery ,/n./@空想;
 review ,/v./@復習;,/v./@回顧;
