--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -200,13 +200,14 @@ chalice ,/n./@杯;,/n./@酒杯;
 chamber ,/n./@會議室;,/n./@會所;,/n./@大厅;
 chaotic ,/adj./@混亂的;,/adj./@紊亂的;
 chapter ,/n./@章節;
+chariot ,/n./@双轮战车;
 charity ,/n./@慈善;,/n./@施捨;,/n./@仁慈;
 charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -281,6 +282,7 @@ context ,/n./@背景;
 contort ,/v./@扭曲;
 contour ,/n./@輪廓;,/n./@等高綫;,/n./@周綫;,/n./@概要;
 control ,/v./@控制;
+convene ,/vi./@召开;,/vt./@召开;
 convent ,/n./@女修道院;
 convert ,/v./@轉變;,/v./@改變;
 convict ,/v./@證明@有罪;
@@ -490,6 +492,7 @@ fervent ,/adj./@强烈的;,/adj./@热烈的;
 fervour ,/n./@热忱;
 fiction ,/n./@虛構;,/adj./@虛構的;,/adj./@捏造的;
 fifteen ,/adj./@十五;
+figment ,/n./@臆造的事物;
 filling ,/n./@填充;,/n./@餡料;
 finally ,/adv./@最終;
 finance ,/n./@經濟;
@@ -545,6 +548,7 @@ genuine ,/adj./@眞實的;
 germane ,/adj./@適用的;
 gesture ,/n./@手勢;
 giraffe ,/n./@長頸鹿;
+gladius ,/n./@短劍;
 glamour ,/n./@魅力;,/n./@迷惑;
 glimpse ,/n./@一瞥;,/n./@一看;
 glisten ,/v.//n./@閃光;
@@ -619,7 +623,7 @@ initial ,/adj./@初始的;
 inquire ,/v./@詢問;
 inquiry ,/n./@詢問;,/n./@查詢;,/n./@調查;
 insider ,/n./@内部人員;,/n./@知情者;
-insight ,/n./@洞察力;
+insight ,/n./@洞察力;,/n./@洞悉;
 inspect ,/v./@檢查;,/v./@視察;
 inspire ,/v./@鼓舞;
 install ,/v./@安裝;
@@ -638,6 +642,7 @@ isolate ,/v./@孤立;
 iterate ,/v./@叠代;
 January ,/n./@一月;
 jasmine ,/n./@茉莉;,/n./@淡黃色;
+javelin ,/n./@标枪;,/n./@投枪;
 jealous ,/adj./@嫉妒的;
 jeopard ,/v./@危及;
 jewelry ,/n./@珠寶;
@@ -665,6 +670,7 @@ leecher ,/n./@吸血騾;,/n./@吸血鬼;
 leisure ,/adj./@空閑的;,/n./@閑暇;
 lengthy ,/adj./@漫長的;
 leopard ,/n./@豹子;
+leprosy ,/n./@麻风病;
 lettuce ,/n./@生菜;,/n./@萵苣;
 lexical ,/adj./@詞彙的;
 liberal ,/adj./@自由主義的;
@@ -876,6 +882,7 @@ poultry ,/n./@家禽;
 poverty ,/n./@貧窮;,/n./@缺乏;
 prairie ,/n./@大草原;
 precede ,/v./@在前;
+precept ,/n./@准则;,/n./@格言;
 precise ,/adj./@精確;
 predial ,/adj./@土地的;,/adj./@农业的;,/n./@农奴;
 predict ,/v./@預言;
@@ -1002,6 +1009,7 @@ robbery ,/n./@搶劫;
 romance ,/n./@浪漫;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
 rubbish ,/n./@垃圾;
+sabbath ,/n./@安息日;
 salvage ,/v./@搶救;,/v./@打撈;
 sarcasm ,/n./@諷刺;,/n./@嘲笑;
 satchel ,/n./@挎包;,/n./@書包;,/n./@小背包;
@@ -1034,6 +1042,7 @@ servant ,/n./@僕人;
 service ,/n./@服務;
 session ,/n./@會議;
 several ,/adj./@幾個;,/adj./@數個;
+shabbat ,/n./@安息日;
 shallow ,/adj./@淺的;
 shamble ,/v./@蹣跚;,/v./@搖晃地走;
 sharpen ,/vt./@削尖;,/vt./@磨快;
