--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -31,6 +31,7 @@ affinity ,/n./@密切;,/n./@吸引力;,/n./@喜歡;
 affluent ,/adj./@富裕的;,/adj./@丰富的;
 aggrieve ,/v./@使苦惱;
 agitator ,/n./@鼓动者;,/n./@搅拌器;
+agrarian ,/adj./@土地的;,/adj./@耕地的;,/adj./@农业的;,/adj./@农村的;
 aircraft ,/n./@飛行器;,/n./@航空器;
 airdrome ,/n./@飛機場;
 airstrip ,/n./@飛機跑道;
@@ -515,6 +516,7 @@ hysteric ,/adj./@亢奮的;
 identify ,/v./@鉴定;,/v./@认出;,/v./@认同;
 identity ,/n./@身份;
 ideology ,/n./@意識形態;,/n./@思想意識;,/n./@觀念學;
+idolatry ,/n./@偶像崇拜;
 ignorant ,/adj./@愚昧的;
 illusion ,/n./@幻觉;
 immmerse ,/n./@沉浸;
@@ -721,6 +723,7 @@ overpass ,/vt./@天桥;
 override ,/v./@不顧;,/v./@忽略;,/v./@踐踏;,/v./@推翻;
 overtake ,/v./@超过;
 overturn ,/v./@推翻;
+paganism ,/n./@异教;
 painting ,/n./@绘画;
 Paladins ,/n./@圣骑士;
 palpable ,/adj./@明顯的;,/adj./@易覺察的;
@@ -820,6 +823,7 @@ reckless ,/adj./@魯莽的;
 recorder ,/n./@記錄員;,/n./@錄音機;
 recovery ,/n./@恢复;,/n./@痊愈;
 refactor ,/n./@重構;,/v./@重構;
+referral ,/n./@转诊;,/n./@轉交;,/n./@提交;
 refinery ,/n./@精炼;,/n./@精炼厂;
 regiment ,/n./@團;,/n./@大量;
 register ,/v./@登记;,/v./@挂号;
@@ -1035,6 +1039,7 @@ variadic ,/adj./@可變參數的;
 variance ,/n./@分歧;,/n./@不和;,/n./@不一致;,/n./@衝突;
 vehement ,/adj./@激烈的;
 velocity ,/n./@速度;
+venerate ,/vt./@崇敬;,/vt./@敬重;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
 vertical ,/adj./@垂直的;,/adj./@竖的;
 vibrancy ,/n./@震動;,/n./@活力;
