--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -400,7 +400,7 @@ generally ,/adj./@通常的;,/adj./@一般的;
 gentleman ,/n./@绅士;
 geography ,/n./@地理學;,/n./@地形;
 gibberish ,/n./@胡言亂語;
-gladiator ,/n./@格鬥者;
+gladiator ,/n./@格鬥者;,/n./@角斗士;
 gratitude ,/n./@感激;,/n./@感谢;
 grievance ,/n./@不滿;,/n./@不平;,/n./@委屈;,/n./@冤情;
 guarantee ,/v./@保证;
@@ -459,6 +459,7 @@ indulgent ,/adj./@放纵的;,/adj./@宽容的;,/adj./@任性的;
 infection ,/n./@感染;,/n./@传染;
 inflation ,/n./@膨胀;
 influence ,/n./@影响;
+informant ,/n./@提供消息的人;,/n./@资料提供者;
 infuriate ,/v./@激怒;
 ingenious ,/adj./@巧妙的;,/adj./@灵巧的;
 ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
@@ -500,6 +501,7 @@ judgement ,/n./@判決;,/n./@意見;,/n./@判斷;
 judicious ,/adj./@明智的;
 kinematic ,/adj./@运动学的;
 knowledge ,/n./@知识;
+labyrinth ,/n./@迷宫;
 landscape ,/n./@风景;,/n./@风景画;,/n./@地形;
 lawnmower ,/n./@割草機;
 legendary ,/adj./@傳說的;,/adj./@傳奇的;
@@ -591,6 +593,7 @@ partially ,/adv./@部分地;
 partition ,/n./@分隔;,/n./@划分;,/n./@隔开;
 passenger ,/n./@旅客;
 passer-by ,/n./@过路人;
+pathology ,/n./@病理学;,/n./@病理;
 patriarch ,/n./@族长;,/n./@元老;,/n./@大主教;
 patricide ,/n./@杀父;
 patronage ,/n./@贊助;,/n./@資助;,/n./@保護人身份;
