--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -103,6 +103,7 @@ centimeter
 cephalopod
 ceremonial
 chalkboard
+charioteer
 chivalrous
 circumcise
 circumvent
@@ -394,6 +395,7 @@ monochroic
 monochrome
 monogamous
 monopolize
+monotheist
 monotonous
 motivation
 multiplier
