--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -45,6 +45,7 @@ collocation
 combination
 comfortable
 commandante
+commandment
 commemorate
 communicate
 compartment
@@ -187,6 +188,7 @@ incredulous
 incremental
 independent
 indignation
+indivisible
 inferiority
 information
 innumerable
@@ -290,8 +292,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-Renaissance
 renaissance
+Renaissance
 replacement
 requirement
 resemblance
