--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -111,6 +111,7 @@ intermission
 intersection
 interstellar
 intervention
+intimidation
 intransigent
 introduction
 irreversible
@@ -120,6 +121,7 @@ magnificence
 manipulation
 manufacturer
 mechanically
+metaphysical
 metropolitan
 misquotation
 modification
@@ -138,6 +140,7 @@ periodically
 perseverance
 perspiration
 perturbation
+plausibility
 possiblility
 predilection
 prerequisite
