--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -615,6 +615,7 @@ leech
 leery
 legal
 lemme
+leper
 let's
 level
 lever
@@ -652,8 +653,8 @@ magic
 major
 mango
 mania
-March
 march
+March
 match
 maths
 maxim
@@ -707,6 +708,7 @@ nasty
 natal
 naval
 navel
+needy
 Negro
 nerve
 never
@@ -1113,6 +1115,7 @@ taboo
 tacit
 taiga
 tardy
+tarot
 taste
 taunt
 teach
