--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -35,6 +35,7 @@ agency
 agenda
 albeit
 albion
+alcove
 alight
 allege
 allude
@@ -144,6 +145,7 @@ better
 beware
 beyond
 biceps
+biggie
 billet
 binary
 bitter
@@ -792,6 +794,7 @@ modest
 modify
 module
 modulo
+molten
 moment
 Monday
 monkey
