--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -200,13 +200,14 @@ chalice
 chamber
 chaotic
 chapter
+chariot
 charity
 charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -281,6 +282,7 @@ context
 contort
 contour
 control
+convene
 convent
 convert
 convict
@@ -490,6 +492,7 @@ fervent
 fervour
 fiction
 fifteen
+figment
 filling
 finally
 finance
@@ -545,6 +548,7 @@ genuine
 germane
 gesture
 giraffe
+gladius
 glamour
 glimpse
 glisten
@@ -638,6 +642,7 @@ isolate
 iterate
 January
 jasmine
+javelin
 jealous
 jeopard
 jewelry
@@ -665,6 +670,7 @@ leecher
 leisure
 lengthy
 leopard
+leprosy
 lettuce
 lexical
 liberal
@@ -876,6 +882,7 @@ poultry
 poverty
 prairie
 precede
+precept
 precise
 predial
 predict
@@ -1002,6 +1009,7 @@ robbery
 romance
 royalty
 rubbish
+sabbath
 salvage
 sarcasm
 satchel
@@ -1034,6 +1042,7 @@ servant
 service
 session
 several
+shabbat
 shallow
 shamble
 sharpen
