--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -31,6 +31,7 @@ affinity
 affluent
 aggrieve
 agitator
+agrarian
 aircraft
 airdrome
 airstrip
@@ -515,6 +516,7 @@ hysteric
 identify
 identity
 ideology
+idolatry
 ignorant
 illusion
 immmerse
@@ -721,6 +723,7 @@ overpass
 override
 overtake
 overturn
+paganism
 painting
 Paladins
 palpable
@@ -820,6 +823,7 @@ reckless
 recorder
 recovery
 refactor
+referral
 refinery
 regiment
 register
@@ -1035,6 +1039,7 @@ variadic
 variance
 vehement
 velocity
+venerate
 verbatim
 vertical
 vibrancy
