--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -459,6 +459,7 @@ indulgent
 infection
 inflation
 influence
+informant
 infuriate
 ingenious
 ingenuity
@@ -500,6 +501,7 @@ judgement
 judicious
 kinematic
 knowledge
+labyrinth
 landscape
 lawnmower
 legendary
@@ -591,6 +593,7 @@ partially
 partition
 passenger
 passer-by
+pathology
 patriarch
 patricide
 patronage
