--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -81,6 +81,7 @@ participation ,/n./@参与;,/n./@分享;,/n./@参股;
 perpendicular ,/n./@垂线;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
 psychological ,/adj./@心理学的;
+psychosomatic ,/adj./@心理压力造成的;
 qualification ,/n./@资格;,/n./@条件;,/n./@限制;,/n./@赋予资格;
 questionnaire ,/n./@问卷;
 regimentation ,/n./@严格控制;,/n./@严密管制;
