--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -187,6 +187,7 @@ credential ,/n./@證書;,/n./@憑據;,/n./@國書;
 cross-talk ,/n./@相声;
 curriculum ,/n./@課程;
 deactivate ,/v./@停用;,/v./@遣散;
+decapitate ,/vt./@斬首;
 decelerate ,/v./@减速;
 definitely ,/adj./@明确的;
 definition ,/n./@定义;
@@ -488,6 +489,7 @@ reluctance ,/n./@不願;,/n./@勉强;
 remarkable ,/adj./@卓越的;,/adj./@非凡的;,/adj./@值得注意的;
 remorseful ,/adj./@懊悔的;,/adj./@悔恨的;
 repatriate ,/v./@遣返;
+repentance ,/n./@悔悟;
 repetition ,/n./@重复;
 repetitive ,/adj./@重复的;
 republican ,/adj./@共和派的;
