--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -103,6 +103,7 @@ inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
 installation ,/n./@安裝;
 insufficient ,/adj./@不足的;
+insurrection ,/n./@叛乱;,/n./@起义;
 intellectual ,/adj./@智力的;,/adj./@智慧的;
 intelligence ,/n./@智慧;
 intermediary ,/n./@调解人;
