--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -495,7 +495,7 @@ land ,/n./@土地;
 lane ,/n./@車道;
 lard ,/n./@豬油;,/v./@潤色;
 lark ,/n./@雲雀;
-lash ,/v./@鞭打;
+lash ,/v./@鞭打;,/n./@鞭打;
 lass ,/n./@情人;,/n./@少女;
 last ,/adj./@最后的;
 late ,/adj./@遲@的;
@@ -535,6 +535,7 @@ loan ,/n./@貸款;
 lobe ,/n./@葉;,/n./@裂片;
 lock ,/n./@鎖;
 logo ,/n./@商標;
+loin ,/n./@腰部;,/n./@下身;,/n./@腰肉;
 long ,/adj./@長@的;
 look ,/v.//vi.//vt./@看;
 loom ,/v./@隱隱出現;,/n./@織布機;
@@ -995,6 +996,7 @@ tube ,/n./@管@子;,/n./@試管;
 tuck ,/v./@捲起;,/v./@擠進;,/v./@收攏;,/n./@褶皺;
 tune ,/n./@曲調;
 turd ,/n./@糞;,/n./@糞便;
+turf ,/n./@草地;,/n./@地盘;,/n./@泥炭;,/n./@赛马;
 turn ,/v./@轉向;,/v./@變化;,/v./@轉動;
 twat ,/n./@笨蛋;,/n./@陰門;,/n./@娘們;
 twin ,/n./@孿生;,/adj./@孿生的;
