--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -459,7 +459,7 @@ exceed ,/v./@超過;
 except ,/v./@除了;
 excess ,/n./@過度;,/n./@過量;,/n./@超過;,/adj./@額外的;
 excite ,/v./@刺激;
-excuse ,/v./@原諒;
+excuse ,/v./@原諒;,/n./@借口;
 exempt ,/vt./@免除;
 exhale ,/v./@呼氣;
 exhume ,/v./@掘出;
@@ -473,6 +473,7 @@ extant ,/adj./@現存的;,/adj./@顯著地;
 extend ,/v./@擴充;,/v./@延展;
 extent ,/n./@程度;
 extern ,/adj./@外部的;
+extort ,/vt./@敲诈;,/vt./@榨取;
 fabric ,/n./@織物;,/n./@結構;,/n./@組織;
 facade ,/n./@正面;,/n./@表面;,/n./@外觀;
 facial ,/adj./@面部的;
@@ -509,7 +510,7 @@ flappy ,/adj./@飛揚的;
 flatly ,/adv./@斷然的;
 flavor ,/n./@滋味;,/n./@風趣;
 fledge ,/n./@羽毛;,/v./@長羽毛;
-fleece ,/n./@羊毛;
+fleece ,/n./@羊毛;,/vt./@欺诈;
 flight ,/n./@航班;,/n./@飛;,/n./@逃走;
 flinch ,/v./@畏縮;
 flower ,/n./@花;
@@ -1375,8 +1376,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-Utopia ,/n./@烏托邦;
 utopia ,/n./@烏托邦;
+Utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
