--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -172,7 +172,7 @@ calcium ,/n./@钙;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
-capital ,/n./@首都;,/n./@資本;
+capital ,/n./@首都;,/n./@資本;,/adj./@死刑的;
 captain ,/n./@船長;
 caption ,/n./@標題;
 capture ,/v./@俘獲;,/v./@捕獲;
@@ -206,8 +206,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-Chinese ,/n./@漢語;
 chinese ,/n./@漢語;
+Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -537,6 +537,7 @@ garbage ,/n./@垃圾;
 garment ,/n./@衣服;,/n./@服裝;
 gaseous ,/adj./@氣體的;,/adj./@氣態的;
 gastric ,/adj./@胃的;
+gazelle ,/n./@瞪羚;
 gelatin ,/n./@明膠;,/n./@動物膠;,/n./@膠製品;
 general ,/adj./@普通的;,/adj./@大體的;,/adj./@一般的;,/adj./@綜合的;
 generic ,/adj./@類的;,/adj./@一般的;,/adj./@屬的;
@@ -896,6 +897,7 @@ present ,/n./@現在;,/v./@提出;,/v./@介紹;,/v./@呈現;,/v./@出席;
 preside ,/v./@主持;
 presume ,/v./@假定;,/v./@推測;
 pretend ,/v./@假裝;
+pretext ,/n./@借口;
 prevail ,/v./@流行;,/v./@盛行;,/v./@戰勝;
 prevent ,/v./@避免;
 preview ,/v./@預覽;
@@ -916,6 +918,7 @@ proffer ,/n./@提供;,/v./@提供;
 profile ,/n./@簡介;,/n./@側面;,/n./@輪廓;
 program ,/n./@程序;,/n./@项目;,/n./@规划;
 project ,/n./@項目;
+prolong ,/vt./@延长;
 promise ,/v./@承諾;
 promote ,/v./@促進;,/v./@提拔;,/v./@推銷;
 pronoun ,/n./@代詞;
@@ -1217,7 +1220,7 @@ urgency ,/n./@緊急;,/n./@緊急事件;
 useless ,/adj./@無用的;
 utensil ,/n./@器皿;,/n./@用具;
 utility ,/n./@實用;,/adj./@實用的;,/n./@實用設施;,/n./@實用性;
-utilize ,/v./@使用;
+utilize ,/v./@使用;,/vt./@利用;
 utopian ,/adj./@烏托邦的;,/adj./@空想的;
 vacancy ,/n./@空缺;,/n./@空位;,/n./@空白;,/n./@空虛;
 vaccine ,/n./@疫苗;
@@ -1229,8 +1232,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
