--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -767,6 +767,7 @@ poignant ,/adj./@酸楚的;,/adj./@辛酸的;,/adj./@悲惨的;
 polarity ,/n./@極性;
 polaroid ,/n./@偏光板;,/n./@偏振片;
 politics ,/n./@政治;
+populace ,/n./@民众;,/n./@大众;
 portable ,/adj./@可携带的;
 position ,/n./@位置;,/n./@姿态;
 positive ,/adj./@明確的;,/adj./@肯定的;,/adj./@絕對的;
@@ -886,6 +887,7 @@ scrutiny ,/v./@仔细检查;
 scullery ,/n./@洗碗間;,/n./@洗滌室;
 security ,/n./@安全;
 sediment ,/n./@沉淀;
+sedition ,/n./@煽动叛乱;
 sedulous ,/adj./@聚精会神的;,/adj./@勤勉的;
 semantic ,/adj./@語義的;
 semester ,/n./@學期;
