--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -252,6 +252,7 @@ destroyed ,/adj./@被毁的;
 detection ,/n./@發現;,/n./@偵察;
 detective ,/n./@侦探;
 determine ,/v./@下决心;,/v./@确定;
+deterrent ,/adj./@威慑的;,/n./@威慑;
 detonator ,/n./@雷管;,/n./@炸藥;,/n./@導火索;
 devastate ,/v./@毀滅;,/v./@毀壞;
 developer ,/n./@开发者;
@@ -511,6 +512,7 @@ lightning ,/n./@閃電;
 limitless ,/adj./@无限度的;
 liquidate ,/v./@清算;,/v./@清償;,/v./@償付;
 literally ,/adj./@确实的;
+loincloth ,/n./@腰布;
 longevity ,/n./@長壽;
 longitude ,/n./@经度;
 lubricant ,/n./@潤滑劑;,/adj./@潤滑的;
@@ -680,7 +682,7 @@ quintuple ,/adj./@五倍的;
 quotation ,/n./@引用;
 radiation ,/n./@輻射;,/n./@放射;
 realistic ,/adj./@逼真的;,/adj./@实际的;
-rebellion ,/n./@反叛;
+rebellion ,/n./@反叛;,/n./@叛乱;
 reception ,/n./@接待;,/n./@招待;
 recession ,/n./(经济)@衰退;
 recipient ,/n./@容器;,/n./@接受者;,/adj./@易接受的;
@@ -737,6 +739,7 @@ scientist ,/n./@科学家;
 scrutable ,/adj./@可以了解的;
 sculpture ,/n./@雕塑;
 secession ,/n./@脫離;,/n./@分離;,/n./@退出;
+seclusion ,/n./@僻静;,/n./@隐居;,/n./@隔绝;,/n./@隔离;,/n./@清静;
 secondary ,/adj./@次要的;,/adj./@第二的;
 sedentary ,/adj./@久坐的;,/adj./@坐慣的;,/adj./@定栖的;,/adj./@靜坐的;
 seduction ,/v./@诱惑;
