--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -187,6 +187,7 @@ credential
 cross-talk
 curriculum
 deactivate
+decapitate
 decelerate
 definitely
 definition
@@ -488,6 +489,7 @@ reluctance
 remarkable
 remorseful
 repatriate
+repentance
 repetition
 repetitive
 republican
