--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -473,6 +473,7 @@ extant
 extend
 extent
 extern
+extort
 fabric
 facade
 facial
@@ -1375,8 +1376,8 @@ urbane
 urgent
 useful
 utmost
-Utopia
 utopia
+Utopia
 vacant
 vacate
 vacuum
