--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -767,6 +767,7 @@ poignant
 polarity
 polaroid
 politics
+populace
 portable
 position
 positive
@@ -886,6 +887,7 @@ scrutiny
 scullery
 security
 sediment
+sedition
 sedulous
 semantic
 semester
