--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -252,6 +252,7 @@ destroyed
 detection
 detective
 determine
+deterrent
 detonator
 devastate
 developer
@@ -511,6 +512,7 @@ lightning
 limitless
 liquidate
 literally
+loincloth
 longevity
 longitude
 lubricant
@@ -737,6 +739,7 @@ scientist
 scrutable
 sculpture
 secession
+seclusion
 secondary
 sedentary
 seduction
