--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -206,8 +206,8 @@ charter
 cherish
 chicken
 chimney
-Chinese
 chinese
+Chinese
 chowder
 chronic
 chuckle
@@ -537,6 +537,7 @@ garbage
 garment
 gaseous
 gastric
+gazelle
 gelatin
 general
 generic
@@ -896,6 +897,7 @@ present
 preside
 presume
 pretend
+pretext
 prevail
 prevent
 preview
@@ -916,6 +918,7 @@ proffer
 profile
 program
 project
+prolong
 promise
 promote
 pronoun
@@ -1229,8 +1232,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
